--- a/index.html
+++ b/index.html
@@ -57,25 +57,25 @@
 <div class="divprodutos">
     <img src="iphones/12.png" class="imgprodutos">
     <h3 class="txtprodutos">IPhone 12 256gb</h3>
-    <h3 class="preco">R$ 4.859,10</h3>
+    <h3 class="preco">R$ 4.859,10 - R$ 4.859,10</h3>
 </div>
 
 <div class="divprodutos">
     <img src="iphones/11.png" class="imgprodutos">
     <h3 class="txtprodutos">IPhone 11 64gb</h3>
-    <h3 class="preco">R$ 2.849,00</h3>
+    <h3 class="preco">R$ 2.849,00 - R$ 2.849,00</h3>
 </div>
 
 <div class="divprodutos">
     <img src="iphones/xr.png" class="imgprodutos">
     <h3 class="txtprodutos">IPhone XR 128gb</h3>
-    <h3 class="preco">R$ 1.999,90</h3>
+    <h3 class="preco">R$ 1.999,90 - R$ 1.999,90</h3>
 </div>
 
 <div class="divprodutos">
     <img src="iphones/8 plus.png" class="imgprodutos">
     <h3 class="txtprodutos">IPhone 8 Plus 64gb</h3>
-    <h3 class="preco">R$ 990,99</h3>
+    <h3 class="preco">R$ 990,99 - R$ 990,99</h3>
 </div>
 
 
