--- a/jompsip14promax.html
+++ b/jompsip14promax.html
@@ -5,7 +5,7 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>IPhone 14 Pro Max</title>
+    <title>IPhone 14</title>
     <link rel="stylesheet" type="text/css" href="jompscell.css">
     
 </head>
@@ -39,7 +39,7 @@
 
 </div>
 
-<div class="esp"><h2 class="texto-produto">Iphone 14 Pro Max</h2>
+<div class="esp"><h2 class="texto-produto">Iphone 14</h2>
     
     <h4 class="opcoes">Modelo:</h4>
 
