Atualizar o jompsip14promax.html

--- a/jompsip14promax.html
+++ b/jompsip14promax.html
@@ -69,10 +69,10 @@
 
     </select>
 
-    <br>
+    <HR>
 
     <div>
-        <a href="https://www.amazon.com/" class="botaocomprar">Comprar</a>
+        <a href="https://www.amazon.com.br/" class="botaocomprar">Comprar</a>
     </div>
 </div>
 
