Atualizar o jompsip14promax.html

--- a/jompsip14promax.html
+++ b/jompsip14promax.html
@@ -69,7 +69,7 @@
 
     </select>
 
-    <HR>
+    <HR class="hr2">
 
     <div>
         <a href="https://www.amazon.com.br/" class="botaocomprar">Comprar</a>
