Atualizar o jompsip14promax.html

--- a/jompsip14promax.html
+++ b/jompsip14promax.html
@@ -41,7 +41,7 @@
 
 <div class="esp"><h2 class="texto-produto">Iphone 14</h2>
     
-    <h4 class="opcoes">Modelo:</h4>
+    <div><h4 class="opcoes">Modelo:</h4>
 
     <select name="Cor" class="selectiphone">
         <option value="preto">IPhone 14</option>
@@ -49,25 +49,26 @@
         <option value="preto">IPhone 14 Pro Max</option>
 
     </select>
+</div>
 
 
-    <h4 class="opcoes">Cor:</h4>
+    <div><h4 class="opcoes">Cor:</h4>
 
     <select name="Cor" class="selectiphone">
         <option value="preto">Preto</option>
         <option value="preto">Cinza</option>
         <option value="preto">Branco</option>
 
-    </select>
+    </select></div>
 
 
-    <h4 class="opcoes">Memória:</h4>
+    <div><h4 class="opcoes">Memória:</h4>
     <select name="Cor" class="select">
         <option value="preto">128gb</option>
         <option value="cinza">256gb</option>
         <option value="dourado">1TB</option>
 
-    </select>
+    </select></div>
 
 
     <div>
