--- a/jompsip14promax.html
+++ b/jompsip14promax.html
@@ -14,7 +14,7 @@
 
 
 <div class="topo">
-    <a href="index.html"><img src="jvcell-img/jomps_cell_logo_1-removebg-preview.png" class="logo" align="center"></a>
+    <a href="jompscell.html"><img src="jvcell-img/jomps_cell_logo_1-removebg-preview.png" class="logo" align="center"></a>
     <img src="imagens/carrinho-de-compras.png" class="carrinho" align="right">
     <img src="imagens/boneco-login.png" class="login" align="right">
 
@@ -41,34 +41,36 @@
 
 <div class="esp"><h2 class="texto-produto">Iphone 14</h2>
     
-    <div><h4 class="opcoes">Modelo:</h4>
+    <h4 class="opcoes">Modelo:</h4>
 
     <select name="Cor" class="selectiphone">
+        <option>Selecione</option>
         <option value="preto">IPhone 14</option>
         <option value="preto">IPhone 14 Pro</option>
         <option value="preto">IPhone 14 Pro Max</option>
 
     </select>
-</div>
 
 
-    <div><h4 class="opcoes">Cor:</h4>
+    <h4 class="opcoes">Cor:</h4>
 
     <select name="Cor" class="selectiphone">
+        <option>Selecione</option>
         <option value="preto">Preto</option>
         <option value="preto">Cinza</option>
         <option value="preto">Branco</option>
 
-    </select></div>
+    </select>
 
 
-    <div><h4 class="opcoes">Memória:</h4>
+    <h4 class="opcoes">Memória:</h4>
     <select name="Cor" class="select">
+        <option>Selecione</option>
         <option value="preto">128gb</option>
         <option value="cinza">256gb</option>
         <option value="dourado">1TB</option>
 
-    </select></div>
+    </select>
 
 
     <div>
