--- a/jompsip14promax.html
+++ b/jompsip14promax.html
@@ -16,7 +16,7 @@
 
 
 <div class="topo">
-    <a href="index.html"><img src="jvcell-img/jomps_cell_logo_1-removebg-preview.png" class="logo" align="center"></a>
+    <a href="jompscell.html"><img src="jvcell-img/jomps_cell_logo_1-removebg-preview.png" class="logo" align="center"></a>
     <img src="imagens/carrinho-de-compras.png" class="carrinho" align="right">
     <img src="imagens/boneco-login.png" class="login" align="right">
 
@@ -78,29 +78,33 @@
 <h2 class="info">Informações do Dispositivo</h2>
 <p class="textopromovendo">O iPhone 14 Pro Max é o mais recente lançamento da Apple, oferecendo uma impressionante câmera principal de 48 MP, uma tela Super Retina XDR OLED de 6,7 polegadas com tecnologia ProMotion, e suporte a HDR para qualidade visual superior. Alimentado pelo potente processador A16 Bionic, possui um sistema de câmera Pro com lentes grande-angular, ultra-angular e teleobjetiva, além do novo Photonic Engine para detalhes aprimorados. O Dynamic Island na tela confere um toque moderno ao design, enquanto recursos como resistência à água IP68 e som surround de alta qualidade completam a experiência. Combinando desempenho excepcional, recursos fotográficos avançados e design elegante, o iPhone 14 Pro Max se destaca entre usuários exigentes.</p>
 
-<h2 align="center">Especificações</h2>
-<p align="center">
+<h2 class="info">Especificações</h2>
+<p class="especificacoes">
     Iphone 14: <br>
-    Camera ---- <br>
-    Processador ---- <br>
-    Memoria RAM ---- <br>
-    IOS ---- <br>
+    Camera Tripla Traseira xxMP, Frontal Dupla xxMP <br>
+    Processador A12 Bionic 1.8ghz <br>
+    Memoria RAM de 6gb <br>
+    IOS 17 <br>
 </p>
-    
-<p align="center">
+<br>
+<hr>
+<br>
+<p class="especificacoes">
     Iphone 14 Pro: <br>
-    Camera ---- <br>
-    Processador ---- <br>
-    Memoria RAM ---- <br>
-    IOS ---- <br>
+    Camera Tripla Traseira xxMP, Frontal Dupla xxMP <br>
+    Processador A12 Bionic 1.8ghz <br>
+    Memoria RAM de 6gb <br>
+    IOS 17 <br>
 </p>
-
-<p align="center">
+<br>
+<hr>
+<br>
+<p class="especificacoes">
     Iphone 14 Pro Max: <br>
-    Camera ---- <br>
-    Processador ---- <br>
-    Memoria RAM ---- <br>
-    IOS ---- <br>
+    Camera Tripla Traseira xxMP, Frontal Dupla xxMP <br>
+    Processador A12 Bionic 1.8ghz <br>
+    Memoria RAM de 6gb <br>
+    IOS 17 <br>
 
 </p>
 
