--- a/jompsip14promax.html
+++ b/jompsip14promax.html
@@ -16,7 +16,7 @@
 
 
 <div class="topo">
-    <a href="index.html"><img src="jvcell-img/jomps_cell_logo_1-removebg-preview.png" class="logo" align="center"></a>
+    <a href="jompscell.html"><img src="jvcell-img/jomps_cell_logo_1-removebg-preview.png" class="logo" align="center"></a>
     <img src="imagens/carrinho-de-compras.png" class="carrinho" align="right">
     <img src="imagens/boneco-login.png" class="login" align="right">
 
@@ -80,31 +80,44 @@
 
 <h2 class="info">Especificações</h2>
 <p class="especificacoes">
-    Iphone 14: <br>
-    Camera Tripla Traseira xxMP, Frontal Dupla xxMP <br>
-    Processador A12 Bionic 1.8ghz <br>
-    Memoria RAM de 6gb <br>
-    IOS 17 <br>
+    <!--Iphone 14: <br>
+    Tamanho da tela: 6,7 polegadas <br>
+    Resolução da tela: Full HD+ (1290 x 2796 pixel) <br>
+    Painel da tela: Super Retina XDR OLED <br>
+    Câmera principal: tripla de 48 MP (principal) + 12 MP (grande angular) + 12 MP (telefoto) <br>
+    Câmera de selfie: 12 megapixels <br>
+    Sistema: iOS 16 <br>
+    Processador: A16 Bionic (Apple) <br>
+    Memória RAM: 6 GB-->
+
 </p>
 <br>
 <hr>
 <br>
 <p class="especificacoes">
     Iphone 14 Pro: <br>
-    Camera Tripla Traseira xxMP, Frontal Dupla xxMP <br>
-    Processador A12 Bionic 1.8ghz <br>
-    Memoria RAM de 6gb <br>
-    IOS 17 <br>
+    Tamanho da tela: 6,7 polegadas <br>
+    Resolução da tela: Full HD+ (1290 x 2796 pixel) <br>
+    Painel da tela: Super Retina XDR OLED <br>
+    Câmera principal: tripla de 48 MP (principal) + 12 MP (grande angular) + 12 MP (telefoto) <br>
+    Câmera de selfie: 12 megapixels <br>
+    Sistema: iOS 16 <br>
+    Processador: A16 Bionic (Apple) <br>
+    Memória RAM: 6 GB
 </p>
 <br>
 <hr>
 <br>
 <p class="especificacoes">
-    Iphone 14 Pro Max: <br>
-    Camera Tripla Traseira xxMP, Frontal Dupla xxMP <br>
-    Processador A12 Bionic 1.8ghz <br>
-    Memoria RAM de 6gb <br>
-    IOS 17 <br>
+    <!--Iphone 14 Pro Max: <br>
+    Tamanho da tela: 6,7 polegadas <br>
+    Resolução da tela: Full HD+ (1290 x 2796 pixel) <br>
+    Painel da tela: Super Retina XDR OLED <br>
+    Câmera principal: tripla de 48 MP (principal) + 12 MP (grande angular) + 12 MP (telefoto) <br>
+    Câmera de selfie: 12 megapixels <br>
+    Sistema: iOS 16 <br>
+    Processador: A16 Bionic (Apple) <br>
+    Memória RAM: 6 GB-->
 
 </p>
 
