--- a/jompsip14promax.html
+++ b/jompsip14promax.html
@@ -16,7 +16,7 @@
 
 
 <div class="topo">
-    <a href="index.html"><img src="jvcell-img/jomps_cell_logo_1-removebg-preview.png" class="logo" align="center"></a>
+    <a href="jompscell.html"><img src="jvcell-img/jomps_cell_logo_1-removebg-preview.png" class="logo" align="center"></a>
     <!--<img src="imagens/carrinho-de-compras.png" class="carrinho" align="right">
     <img src="imagens/boneco-login.png" class="login" align="right">-->
 
@@ -225,9 +225,9 @@
 
             //Iphone 14 Pro Azul
             "opcao2-link1-pagina1": "https://api.whatsapp.com/send?phone=553388434433&text=Ol%C3%A1%20JompsCell,%20tenho%20interesse%20no%20IPhone%2014%20Pro,%20Azul,%20128gb!",
-            "opcao2-link1-pagina2": "https://api.whatsapp.com/send?phone=553388434433&text=Ol%C3%A1%20JompsCell,%20tenho%20interesse%20no%20IPhone%201420Pro,%20Azul,%20256gb!",
-            "opcao2-link1-pagina3": "https://api.whatsapp.com/send?phone=553388434433&text=Ol%C3%A1%20JompsCell,%20tenho%20interesse%20no%20IPhone%201420Pro,%20Azul,%20512gb!",
-            "opcao2-link1-pagina4": "https://api.whatsapp.com/send?phone=553388434433&text=Ol%C3%A1%20JompsCell,%20tenho%20interesse%20no%20IPhone%201420Pro,%20Azul,%201TB!",
+            "opcao2-link1-pagina2": "https://api.whatsapp.com/send?phone=553388434433&text=Ol%C3%A1%20JompsCell,%20tenho%20interesse%20no%20IPhone%2014%20Pro,%20Azul,%20256gb!",
+            "opcao2-link1-pagina3": "https://api.whatsapp.com/send?phone=553388434433&text=Ol%C3%A1%20JompsCell,%20tenho%20interesse%20no%20IPhone%2014%20Pro,%20Azul,%20512gb!",
+            "opcao2-link1-pagina4": "https://api.whatsapp.com/send?phone=553388434433&text=Ol%C3%A1%20JompsCell,%20tenho%20interesse%20no%20IPhone%2014%20Pro,%20Azul,%201TB!",
 
             //Iphone 14 Pro Roxo
             "opcao2-link2-pagina1": "https://api.whatsapp.com/send?phone=553388434433&text=Ol%C3%A1%20JompsCell,%20tenho%20interesse%20no%20IPhone%2014%20Pro,%20Roxo,%20128gb!",
