--- a/jompsip14promax.html
+++ b/jompsip14promax.html
@@ -16,7 +16,7 @@
 
 
 <div class="topo">
-    <a href="index.html"><img src="jvcell-img/jomps_cell_logo_1-removebg-preview.png" class="logo" align="center"></a>
+    <a href="jompscell.html"><img src="jvcell-img/jomps_cell_logo_1-removebg-preview.png" class="logo" align="center"></a>
     <!--<img src="imagens/carrinho-de-compras.png" class="carrinho" align="right">
     <img src="imagens/boneco-login.png" class="login" align="right">-->
 
@@ -307,7 +307,7 @@
         if (link) {
             window.location.href = link; // Redirecione para o link gerado
         } else {
-            alert("Combinação de seleções não encontrada.");
+            alert("Combinação Inexistente");
         }
     });
 </script>
