--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
     <div class="topo">
-        <a href="index.html"><img src="jvcell-img/jomps_cell_logo_1-removebg-preview.png" class="logo" align="center"></a>
+        <a href="jompscell.html"><img src="jvcell-img/jomps_cell_logo_1-removebg-preview.png" class="logo" align="center"></a>
         <!--<img src="imagens/carrinho-de-compras.png" class="carrinho" align="right">
         <img src="imagens/boneco-login.png" class="login" align="right">-->
 
@@ -56,21 +56,21 @@
             <td>
                 <a href="jompsip14promax.html" class="linkformat"><img src="iphones/14 pro max.png" class="imgprodutos"></a>
                 <a href="jompsip14promax.html" class="linkformat"><h3 class="txtprodutos">IPhone 14</h3></a>
-                <a href="jompsip14promax.html" class="linkformat"><h3 class="preco">R$ 5.174,10 - R$ 8.368,90</h3></a>
+                <a href="jompsip14promax.html" class="linkformat"><h3 class="preco">R$ 4.000,00</h3></a>
             </td>
 
 
             <td>
                 <img src="iphones/13.png" class="imgprodutos">
                 <h3 class="txtprodutos">IPhone 13</h3>
-                <h3 class="preco">R$ 4.364,10 - R$7.599,00</h3>
+                <h3 class="preco">R$ 4.000,00</h3>
             </td>
 
 
             <td>
                 <img src="iphones/12.png" class="imgprodutos">
                 <h3 class="txtprodutos">IPhone 12</h3>
-                <h3 class="preco">R$ 4.859,10</h3>
+                <h3 class="preco">R$ 4.000,00</h3>
             </td>
 
         </tr>
@@ -80,21 +80,21 @@
             <td>
                 <img src="iphones/xr.png" class="imgprodutos">
                 <h3 class="txtprodutos">IPhone XR</h3>
-                <h3 class="preco">R$ 1.999,90</h3>
+                <h3 class="preco">R$ 4.000,00</h3>
             </td>
 
             
             <td>
                 <img src="iphones/11.png" class="imgprodutos">
                 <h3 class="txtprodutos">IPhone 11</h3>
-                <h3 class="preco">R$ 2.849,00</h3>
+                <h3 class="preco">R$ 4.000,00</h3>
             </td>
 
 
             <td>
                 <img src="iphones/8 plus.png" class="imgprodutos">
                 <h3 class="txtprodutos">IPhone 8 Plus</h3>
-                <h3 class="preco">R$ 990,99</h3>
+                <h3 class="preco">R$ 4.000,00</h3>
             </td>
             
 
